--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 某李的個人小站
 SEOTitle: 某李的個人小站 | Maulei Blog
 header-img: img/post-bg-desk.jpg
 email: hoyin99999@gmail.com
-description: "Every failure is leading towards success."
+description: "某種意義上來說，我們都會葬在一個名爲宇宙的墓穴中。"
 keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
 url: "http://qiubaiying.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
