--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/post-bg-desk.jpg
 email: hoyin99999@gmail.com
 description: "某種意義上來說，我們都會葬在一個名爲宇宙的墓穴中。"
 keyword: "Maulei, Maulei Blog, 某李的個人小站, 某李, maulei"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+url: "http://Maulei41.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/Maulei41/Maulei41.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -59,9 +59,9 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  repo: Maulei41.github.io    #仓库名称
+  owner: Maulei41    #github用户名
+  admin: Maulei41
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
